created index.html file with form

--- a/lab2/index.html
+++ b/lab2/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<form action="form.py">
+<form action="/cgi-bin/form.py">
     <label for="first-name">First name: </label><input type="text" name="first-name" id="first-name">
     <br>
     <label for="last-name">Last name: </label><input type="text" name="last-name" id="last-name">
